Initialized Postgres And Liquibase

--- a/backend/petshealth/src/main/resources/application.properties
+++ b/backend/petshealth/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=petshealth
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/petshealth
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
+#spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=validate
