--- a/backend/petshealth/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/petshealth/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,7 @@
 databaseChangeLog:
   - include:
       file: db/changelog/0.0.1/changelog-1.sql
+  - include:
+      file: db/changelog/0.0.2/changelog-2.sql
 
 
