--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -30,7 +30,7 @@ jobs:
       if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
         cd frontend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../frontend-image .
+        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../../frontend-image .
 
     - name: Build backend image
       if: ${{ github.event.inputs.build_backend == 'true' }}
@@ -38,18 +38,19 @@ jobs:
         cd backend/petshealth
         docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
 
-    - name: Save Docker images as tar files
+    - name: Save Frontend Docker image as tar file
+      if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
-        if [ -f frontend-image.tar ]; then
-          docker save petshealth-frontend:latest -o frontend-image.tar
-        fi
-        if [ -f backend-image.tar ]; then
-          docker save petshealth-backend:latest -o backend-image.tar
-        fi
+        docker save petshealth-frontend:latest -o frontend-image.tar
+
+    - name: Save Backend Docker image as tar file
+      if: ${{ github.event.inputs.build_backend == 'true' }}
+      run: |
+        docker save petshealth-backend:latest -o backend-image.tar
 
     - name: Create zip file of Docker images
       run: |
-        zip docker-images.zip frontend-image.tar backend-image.tar
+        zip docker-images.zip frontend-image.tar backend-image.tar || true
 
     - name: Upload zip file as artifact
       uses: actions/upload-artifact@v3
