--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -29,12 +29,14 @@ jobs:
     - name: Build frontend image
       if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
-        docker buildx build --file ./frontend/petshealth/Dockerfile -t petshealth-frontend:latest --output type=local,dest=./frontend-image .
+        cd frontend/petshealth
+        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../../frontend-image .
 
     - name: Build backend image
       if: ${{ github.event.inputs.build_backend == 'true' }}
       run: |
-        docker buildx build --file ./backend/petshealth/Dockerfile -t petshealth-backend:latest --output type=local,dest=./backend-image .
+        cd backend/petshealth
+        docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
 
     - name: Save Frontend Docker image as tar file
       if: ${{ github.event.inputs.build_frontend == 'true' }}
