--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -8,16 +8,11 @@ on:
         required: true
         default: 'true'
         type: boolean
-      build_backend:
-        description: 'Build backend image'
-        required: true
-        default: 'true'
-        type: boolean
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.build_frontend == 'true' || github.event.inputs.build_backend == 'true' }}
+    if: ${{ github.event.inputs.build_frontend == 'true' }}
 
     steps:
     - name: Checkout code
@@ -27,39 +22,19 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Build frontend image
-      if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
-        cd frontend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../../frontend-image .
+        docker buildx build --file ./frontend/petshealth/Dockerfile -t petshealth-frontend:latest --output type=local,dest=./frontend-image .
 
-    - name: Build backend image
-      if: ${{ github.event.inputs.build_backend == 'true' }}
+    - name: Save Docker image as tar file
       run: |
-        cd backend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
+        docker save petshealth-frontend:latest -o frontend-image.tar
 
-    - name: Save Frontend Docker image as tar file
-      if: ${{ github.event.inputs.build_frontend == 'true' }}
+    - name: Create zip file of Docker image
       run: |
-        if [ -d ./frontend-image ]; then
-          docker save petshealth-frontend:latest -o frontend-image.tar
-        fi
-        ls -l frontend-image.tar
-
-    - name: Save Backend Docker image as tar file
-      if: ${{ github.event.inputs.build_backend == 'true' }}
-      run: |
-        if [ -d ./backend-image ]; then
-          docker save petshealth-backend:latest -o backend-image.tar
-        fi
-        ls -l backend-image.tar
-
-    - name: Create zip file of Docker images
-      run: |
-        zip docker-images.zip frontend-image.tar backend-image.tar || true
+        zip frontend-image.zip frontend-image.tar
 
     - name: Upload zip file as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: docker-images
-        path: docker-images.zip
+        name: frontend-docker-image
+        path: frontend-image.zip
