--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -8,11 +8,16 @@ on:
         required: true
         default: 'true'
         type: boolean
+      build_backend:
+        description: 'Build backend image'
+        required: true
+        default: 'true'
+        type: boolean
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.build_frontend == 'true' }}
+    if: ${{ github.event.inputs.build_frontend == 'true' || github.event.inputs.build_backend == 'true' }}
 
     steps:
     - name: Checkout code
@@ -25,19 +30,36 @@ jobs:
       if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
         cd frontend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../frontend-image .
+        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../../frontend-image .
 
-
-    - name: Save Docker image as tar file
+    - name: Build backend image
+      if: ${{ github.event.inputs.build_backend == 'true' }}
       run: |
-        docker save petshealth-frontend:latest -o frontend-image.tar
+        cd backend/petshealth
+        docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
 
-    - name: Create zip file of Docker image
+    - name: Save Frontend Docker image as tar file
+      if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
-        zip frontend-image.zip frontend-image.tar
+        if [ -d ./frontend-image ]; then
+          docker save petshealth-frontend:latest -o frontend-image.tar
+        fi
+        ls -l frontend-image.tar
+
+    - name: Save Backend Docker image as tar file
+      if: ${{ github.event.inputs.build_backend == 'true' }}
+      run: |
+        if [ -d ./backend-image ]; then
+          docker save petshealth-backend:latest -o backend-image.tar
+        fi
+        ls -l backend-image.tar
+
+    - name: Create zip file of Docker images
+      run: |
+        zip docker-images.zip frontend-image.tar backend-image.tar || true
 
     - name: Upload zip file as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: frontend-docker-image
-        path: frontend-image.zip
+        name: docker-images
+        path: docker-images.zip
