--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -30,13 +30,13 @@ jobs:
       if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
         cd frontend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../../frontend-image .
+        docker buildx build -t petshealth-frontend:latest .
 
     - name: Build backend image
       if: ${{ github.event.inputs.build_backend == 'true' }}
       run: |
         cd backend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
+        docker buildx build -t petshealth-backend:latest .
 
     - name: Verify Frontend Docker image
       if: ${{ github.event.inputs.build_frontend == 'true' }}
