--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -17,42 +17,40 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.build_frontend == 'true' || github.event.inputs.build_backend == 'true' }}
-
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
     - name: Build frontend image
       if: ${{ github.event.inputs.build_frontend == 'true' }}
       run: |
         cd frontend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-frontend:latest --output type=local,dest=../frontend-image .
+        docker build -t petshealth-frontend:latest .
 
     - name: Build backend image
       if: ${{ github.event.inputs.build_backend == 'true' }}
       run: |
         cd backend/petshealth
-        docker buildx build --file Dockerfile -t petshealth-backend:latest --output type=local,dest=../../backend-image .
+        docker build -t petshealth-backend:latest .
 
     - name: Save Docker images as tar files
       run: |
-        if [ -f frontend-image.tar ]; then
-          docker save petshealth-frontend:latest -o frontend-image.tar
+        if [ "${{ github.event.inputs.build_frontend }}" = "true" ]; then
+          docker save petshealth-frontend:latest -o petshealth-frontend.tar
         fi
-        if [ -f backend-image.tar ]; then
-          docker save petshealth-backend:latest -o backend-image.tar
+        if [ "${{ github.event.inputs.build_backend }}" = "true" ]; then
+          docker save petshealth-backend:latest -o petshealth-backend.tar
         fi
 
     - name: Create zip file of Docker images
       run: |
-        zip docker-images.zip frontend-image.tar backend-image.tar
+        zip -r petshealth-image.zip *.tar
 
     - name: Upload zip file as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: docker-images
-        path: docker-images.zip
+        name: petshealth-docker-image
+        path: petshealth-image.zip
